# tony-packer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/compiler/tests/: minify.rs
crates/compiler/tests/common/: mod.rs
crates/compiler/tests/fixtures/minify/css/basic/: output.js
crates/core/: Cargo.toml
crates/core/examples/: cache_store.rs
crates/core/src/: lib.rs
crates/core/src/cache/: cache_store.rs  mod.rs  module_cache.rs  utils.rs
crates/core/src/cache/module_cache/: immutable_modules.rs  module_memory_store.rs  mutable_modules.rs
crates/core/src/config/: config_regex.rs  custom.rs  external.rs  mod.rs  persistent_cache.rs
crates/core/src/context/: mod.rs
crates/core/src/error/: mod.rs
crates/core/src/module/: mod.rs  module_graph.rs  watch_graph.rs
crates/core/src/plugin/: mod.rs  plugin_driver.rs
crates/core/src/record/: mod.rs
crates/macro_cache_item/: Cargo.toml
crates/macro_cache_item/src/: lib.rs
crates/plugin_resolve/: Cargo.toml
crates/plugin_resolve/src/: lib.rs
crates/testing_helpers/: Cargo.toml
crates/testing_helpers/src/: lib.rs
crates/toolkit/: Cargo.toml
crates/toolkit/src/hash/: mod.rs
crates/utils/: Cargo.toml
crates/utils/src/: hash.rs  lib.rs
docs/: core-architecture.excalidraw
