[workspace]
members = [
  "crates/*",
]
resolver = "2"


[workspace.dependencies]
anyhow = "1"
thiserror = "1.0.61"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version="1.38.0", features=["sync", "fs"] }
futures={version="0.3.30"}
