[package]
name = "toy_farm_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
toy_farm_core = { path = "../core", version = "0.1.0" }
toy_farm_utils = { path = "../utils", version = "0.1.0" }
toy_farm_toolkit = { path = "../toolkit", version = " 0.0.1"}
toy_farm_plugin_resolve = { path = "../plugin_resolve", version = " 0.0.1"}
toy_farm_testing_helpers = { path = "../testing_helpers", version = "0.0.1" }
tokio= { workspace = true }
futures={ workspace = true }
