[package]
name = "toy_farm_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = "0.6"
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio= { workspace = true }
dashmap = "5.0"
futures={ workspace = true }
