[package]
name = "toy_farm_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = "0.6"
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio= { workspace = true }
dashmap = "5.0"
futures={ workspace = true }
rkyv = { version = "0.7.42" }
rkyv_dyn = "0.7.42"
toy_farm_macro_cache_item = { version = "0.0.1", path = "../macro_cache_item" }
rkyv_typename = "0.7.42"
toy_farm_utils = { path = "../utils", version = "0.1.0" }
swc_ecma_ast = { version = "0.112.6", features = ["rkyv-impl", "serde-impl"] }
swc_ecma_parser = { version = "0.143.10" }
swc_css_ast = { version = "0.140.21", features = ["rkyv-impl"] }
swc_html_ast = { version = "0.33.20", features = ["rkyv-impl"] }
swc_common = { version = "0.33.20", features = [
  "concurrent",
  "sourcemap",
  "rkyv-impl",
] }
downcast-rs = "1.2"
ptr_meta = "0.1.4"







[dev-dependencies]
tokio= { workspace = true }
